Animaciones para la seccion productos

--- a/index.html
+++ b/index.html
@@ -128,13 +128,30 @@
             <h2 class="titulo">Productos</h2>
 
 
-            <div class="container-producto-home grid-producto1">
-                <a href="./src/views/gins.html"><img src="./src/assets/img/gins.jpg"
-                        alt="Gins Nacionales e Importados"></a>
+            <div class="container-producto-home grid-producto1 flip-box">
+                <div class="flip-box-inner">
+                    <div class="flip-box-front">
+                        <a href="./src/views/gins.html"><img src="./src/assets/img/gins.jpg"
+                                alt="Gins Nacionales e Importados"></a>
+                    </div>
+                    <div class="flip-box-back">
+                        <h2>Gins</h2>
+                        <p>Contamos con la mayor variedad de Gins Nacionales e Importados. También traemos productos a                          pedido de nuestros clientes. Somos los importadores oficiales de muchas marcas de renombre a nivel internacional</p>
+                    </div>
+                </div>
             </div>
 
-            <div class="container-producto-home grid-producto2">
-                <a href="./src/views/tonicas.html"><img src="./src/assets/img/tonicas.jpg" alt="Aguas tonicas"></a>
+            <div class="container-producto-home grid-producto2 flip-box">
+                <div class="flip-box-inner">
+                    <div class="flip-box-front">
+                        <a href="./src/views/tonicas.html"><img src="./src/assets/img/tonicas.jpg"
+                                alt="Aguas tonicas"></a>
+                    </div>
+                    <div class="flip-box-back">
+                        <h2>Tonicas</h2>
+                        <p>Trabajamos con las marcas más importantes del mercado internacional. Somos importadores oficiales tanto de Britvic como de Fever Tree. Contamos con una amplia variedad de tónicas nacionales de alta calidad</p>
+                    </div>
+                </div>
             </div>
 
             <!-- Slider de productos más vendidos -->
