Agregadas animaciones para section reviews

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <!-- probablemente un carousel con más videos de las reviews en YT usando una playlist-->
 
 
-            <div class="container-video grid-item1">
+            <div class="container-video grid-item1 animacion-review-left">
                 <iframe class="review-video" src="https://www.youtube.com/embed/KaD7zCHyopQ"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -94,7 +94,7 @@
                 </iframe>
             </div>
 
-            <div class="container-video grid-item2">
+            <div class="container-video grid-item2 animacion-review-right">
                 <iframe class="review-video" src="https://www.youtube.com/embed/HC_ZFR1DQV0"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -102,15 +102,15 @@
                 </iframe>
             </div>
 
-            <div class="container-video grid-item3">
-                <iframe class="review-video" src="https://www.youtube.com/embed/6gA_d8xmAeQ"
+            <div class="container-video grid-item3 animacion-review-left">
+                <iframe class="review-video " src="https://www.youtube.com/embed/6gA_d8xmAeQ"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                 </iframe>
             </div>
 
-            <div class="container-video grid-item4">
+            <div class="container-video grid-item4 animacion-review-right">
                 <iframe class="review-video" src="https://www.youtube.com/embed/D-ac3dU7XY8"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;           picture-in-picture"
