--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <button class="btn btn-outline-light" type="submit">Search</button>
                     </form>
                     <ul class="navbar-nav ms-auto mb-2 mb-xl-0">
-                        <li class="nav-item">
+                        <li id="nav-li" class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#homePage">Home</a>
                         </li>
                         <li class="nav-item">
