--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="description" content="Comprá productos de GinHouse por internet. Tenemos gins y ginebras nacionales, artesanales, small batch e importados, gaseosas tónicas y más. Hacé tu pedido y pagalo online.">
 
+    <!-- Keywords -->
+    <meta name="keywords" content="Gin, Ginebra, Tónica, Small batch, Beefeater, Tanqueray, Argentina, importado, alcohol, martini, artesanal, cata, tonic, destilado, whisky, vino, wine, craft. bebida, Bombay">
+
+    <!-- Open graph -->
+    <meta property="og:title" content="Tienda Online de GinHouse - Tu tienda de Gin">
+    <meta property="og:description" content="Comprá productos de GinHouse por internet. Tenemos gins nacionales, artesanales, e importados. Contamos con la mayor variedad de aguas tónicas. Hacé tu pedido y pagalo online.">
+    <meta property="og:image" content="url a insertar"> 
+    <!-- cuando la suba será completada la url -->
+    
     <!-- Fonts -->
     <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,13 +24,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
     <!-- Bootsrap CSS -->
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
-    <title>Proyecto Coderhouse</title>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./src/assets/img/favicon.ico" type="image/x-icon">
+    <title>Tienda Online de GinHouse - Tu tienda de Gin</title>
 </head>
 
 <body>
