Modificado footer. Arreglada la posicion de los elementos en las flip card. Efecto en titulos

--- a/index.html
+++ b/index.html
@@ -118,13 +118,12 @@
 
 
             <div class="row">
-                <button type="button" class="glow-on-hover" data-bs-toggle="modal" data-bs-target="#modalhome">Catas y
-                    Eventos</button>
+                <button type="button" class="glow-on-hover" data-bs-toggle="modal" data-bs-target="#modalhome">Sumate a nuestras catas</button>
                 <div class="modal fade" id="modalhome" tabindex="-1" aria_hidden="true" aria-labelledby="modalTitle">
                     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="modalTitle">Sumate a nuestras catas y eventos</h5>
+                                <h5 class="modal-title" id="modalTitle">Catas y eventos</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-labelled="close"></button>
                             </div>
@@ -338,7 +337,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-8 col-lg-8">
+                <div class="col-sm-12 col-md-8 col-lg-7">
 
                     <nav class="redes-sociales">
                         <!-- Iconos con links de rrss y contacto -->
@@ -356,7 +355,7 @@
                 </div>
                 
                 
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-5">
                     <nav class="datos-contacto">
                         <!-- direccion y horario -->
 
