--- a/index.html
+++ b/index.html
@@ -118,13 +118,14 @@
 
 
             <div class="row">
-                <button type="button" class="glow-on-hover" data-bs-toggle="modal" data-bs-target="#modalhome">Sumate a nuestras catas</button>
+                <button type="button" class="glow-on-hover" data-bs-toggle="modal" data-bs-target="#modalhome">Sumate a
+                    nuestras catas</button>
                 <div class="modal fade" id="modalhome" tabindex="-1" aria_hidden="true" aria-labelledby="modalTitle">
                     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="modalTitle">Catas y eventos</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                                     aria-labelled="close"></button>
                             </div>
                             <div class="modal-body">
@@ -353,8 +354,8 @@
 
                     </nav>
                 </div>
-                
-                
+
+
                 <div class="col-sm-12 col-md-4 col-lg-5">
                     <nav class="datos-contacto">
                         <!-- direccion y horario -->
@@ -373,7 +374,7 @@
 
     </footer>
 
-   
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
